frontend/test/should_fail/array_or.grg
function or(ref a:array<int>) : boolean
{
	return(a.or());
}